--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -53,18 +53,19 @@ LAS RAMAS SE USAN SI ESTAS TRABAJANDO COLABORATIVAMENTE -->
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
-
-
-
-
-
-            
           </div>
         </div>
       </nav>
 </header>
 
+<section>
+    <h1>Sobre mi</h1>
+    <h2>Historia</h2>
+    <p> Comence este emprendimiento ....</p>
+    <img src="" alt=""> <!-- Foto de Bebi -->
+</section>
 
+ 
 
 
 
