--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -9,13 +9,7 @@
     <title>  Cozy Crochet</title>
 </head>
 <body>
-    <!-- PASO UN CREAR UN REPOSITORIO EN GITHUB, ME DA UNA SERIE DE COMANDOS
-    LOS PEGO, ADD .  PARA CAMBIOS Y COMMIT PARA MENSAJES 
-GIT REMOTE PARA CONECTAR LA PC CON EL REPOSITORIO
-POR ULTIMO GIT PUSH PARA LLEVAR LOS COMANDOS A LA NUBE
-AHI YA EN NUESTRO REPOSITORIO ESTA TODO SUBIDO
-VAMOS A SETTING LUEGO A PAGES Y VAMOS A LA BRANCH QUE QUERES QUE SE SUBA
-LAS RAMAS SE USAN SI ESTAS TRABAJANDO COLABORATIVAMENTE -->
+   
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -28,24 +22,24 @@ LAS RAMAS SE USAN SI ESTAS TRABAJANDO COLABORATIVAMENTE -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="../pages/productos.html">Productos</a>
+                <a class="nav-link" href="#">Productos</a>
               </li>
 
               
               <li class="nav-item">
-                <a class="nav-link disabled"  href="../pages/cuenta.html" > Mi cuenta </a>
+                <a class="nav-link disabled"> Mi cuenta </a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link disabled" href="../pages/sobremi.html" > Sobre mi </a>
+                <a class="nav-link disabled"> Sobre mi </a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link disabled" href="../pages/novedades.html"> Novedades </a>
+                <a class="nav-link disabled"> Novedades </a>
               </li>
 
             </ul>
