--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -37,15 +37,15 @@ LAS RAMAS SE USAN SI ESTAS TRABAJANDO COLABORATIVAMENTE -->
 
               
               <li class="nav-item">
-                <a class="nav-link disabled"  href="../pages/cuenta.html" > Mi cuenta </a>
+                <a class="nav-link "  href="../pages/cuenta.html" > Mi cuenta </a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link disabled" href="../pages/sobremi.html" > Sobre mi </a>
+                <a class="nav-link " href="../pages/sobremi.html" > Sobre mi </a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link disabled" href="../pages/novedades.html"> Novedades </a>
+                <a class="nav-link " href="../pages/novedades.html"> Novedades </a>
               </li>
 
             </ul>
