--- a/pages/productos.html
+++ b/pages/productos.html
@@ -31,15 +31,15 @@
 
               
               <li class="nav-item">
-                <a class="nav-link disabled"> Mi cuenta </a>
+                <a class="nav-link "> Mi cuenta </a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link disabled"> Sobre mi </a>
+                <a class="nav-link "> Sobre mi </a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link disabled"> Novedades </a>
+                <a class="nav-link "> Novedades </a>
               </li>
 
             </ul>
