esta es la teka

--- a/pages/cuenta.html
+++ b/pages/cuenta.html
@@ -22,24 +22,24 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Productos</a>
+                <a class="nav-link" href="../pages/productos.html">Productos</a>
               </li>
 
               
               <li class="nav-item">
-                <a class="nav-link "> Mi cuenta </a>
+                <a class="nav-link " href="../pages/cuenta.html"> Mi cuenta </a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link "> Sobre mi </a>
+                <a class="nav-link " href="../pages/sobremi.html"> Sobre mi </a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link "> Novedades </a>
+                <a class="nav-link " href="../pages/novedades.html"> Novedades </a>
               </li>
 
             </ul>
