modificacion del archivo index

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -9,60 +9,14 @@
     <title>  Cozy Crochet</title>
 </head>
 <body>
-    <!-- PASO UN CREAR UN REPOSITORIO EN GITHUB, ME DA UNA SERIE DE COMANDOS
-    LOS PEGO, ADD .  PARA CAMBIOS Y COMMIT PARA MENSAJES 
-GIT REMOTE PARA CONECTAR LA PC CON EL REPOSITORIO
-POR ULTIMO GIT PUSH PARA LLEVAR LOS COMANDOS A LA NUBE
-AHI YA EN NUESTRO REPOSITORIO ESTA TODO SUBIDO
-VAMOS A SETTING LUEGO A PAGES Y VAMOS A LA BRANCH QUE QUERES QUE SE SUBA
-LAS RAMAS SE USAN SI ESTAS TRABAJANDO COLABORATIVAMENTE -->
-<header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-
-          <a class="navbar-brand" href="#">Cozy Crochet</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/productos.html">Productos</a>
-              </li>
-
-              
-              <li class="nav-item">
-                <a class="nav-link "  href="../pages/cuenta.html" > Mi cuenta </a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link " href="../pages/sobremi.html" > Sobre mi </a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link " href="../pages/novedades.html"> Novedades </a>
-              </li>
-
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Buscar</button>
-            </form>
-          </div>
-        </div>
-      </nav>
-</header>
 
 <section>
     <h1>Sobre mi</h1>
     <h2>Historia</h2>
-    <p> Comence este emprendimiento ....</p>
+    <p> Me llamo Brenda Monte, tengo 17 años y soy de Buenos Aires, Argentina. Desde chiquita que veo a mi abuela tejer cuando voy a su casa. Mi mamá también sabe tejer. Un día aburridas con mi mamá y mi abuela, me enseñaron a tejer. Hace poco lo tomé como un pasatiempo y fui ganando más experiencia con tutoriales de internet. Decidí hacer Cozy Crochet para que la gente pueda también disfrutar de las prendas lindas y cómodas que sé hacer. Tejer es poder diseñar tu propio vestidor.</p>
     <img src="" alt=""> <!-- Foto de Bebi -->
+
+    
 </section>
 
  
