--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title> Cozy Crochet</title>
 </head>
 
-<body class="body-style">
+<body>
   <!-- PASO UN CREAR UN REPOSITORIO EN GITHUB, ME DA UNA SERIE DE COMANDOS
       LOS PEGO, ADD .  PARA CAMBIOS Y COMMIT PARA MENSAJES 
   GIT REMOTE PARA CONECTAR LA PC CON EL REPOSITORIO
@@ -19,16 +19,16 @@
   VAMOS A SETTING LUEGO A PAGES Y VAMOS A LA BRANCH QUE QUERES QUE SE SUBA
   LAS RAMAS SE USAN SI ESTAS TRABAJANDO COLABORATIVAMENTE -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-style">
-      <div class="container-fluid">
-        <img src="../imagenes/logo.webp" alt="logo" height="100" class="m-1">
+    <nav class="navbar navbar-expand-lg navbar-style ">
+      <div class="container-fluid "> 
+        <img src="../imagenes/logo.webp" alt="logo" height="80" class="m-1">
         <a class="navbar-brand navbar-title" href="index.html">Cozy Crochet</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon fs-6"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0  ">
+          <ul class=" navbar-nav me-auto mb-2 mb-lg-0  ">
 
             <li class="nav-item ">
               <a class="nav-link active  " aria-current="page" href="index.html">Home</a>
@@ -53,27 +53,51 @@
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-danger" type="submit">Buscar</button>
+            <button class="btn button-style" type="submit">Buscar</button>
           </form>
         </div>
       </div>
     </nav>
   </header>
-  <div class="px-4 py-5 my-5 text-center">
-    <img class="d-block mx-auto mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-    <h1 class="display-5 fw-bold text-body-emphasis">Centered hero</h1>
-    <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-        popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive
-        prebuilt components, and powerful JavaScript plugins.</p>
-      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+
+  <div id="carouselExampleCaptions" class="carousel slide">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="..." class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>PRODUCTO 1</h5>
+          <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Second slide label</h5>
+          <p>Some representative placeholder content for the second slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Third slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
       </div>
     </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previo</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Seguiente</span>
+    </button>
   </div>
-
-
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
