--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -73,8 +73,8 @@
                         cómodas que sé hacer. Tejer es poder diseñar tu propio vestidor.</p>
                     
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                        <a href="https://instagram.com/bren_monte?igshid=ZWIzMWE5ZmU3Zg==" class="btn btn-primary btn-lg px-4 gap-3">Instagram</a>
-                        <a href="https://twitter.com/bebianalu?s=11&t=_X5z9uNbO11NK7YmImOkyw" class="btn btn-outline-secondary btn-lg px-4">Twitter</a>
+                        <a href="https://instagram.com/bren_monte?igshid=ZWIzMWE5ZmU3Zg==" class="btn button-style btn-lg px-4 gap-3">Instagram</a>
+                        <a href="https://twitter.com/bebianalu?s=11&t=_X5z9uNbO11NK7YmImOkyw" class="btn button-style btn-lg px-4">Twitter</a>
                        
                     </div>
                 </div>
