--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-style ">
       <div class="container-fluid "> 
-        <img src="./imagenes/logo.webp" alt="logo" height="80" class="m-1">
-        <a class="navbar-brand navbar-title" href="index.html">Cozy Crochet</a>
+        <img src="../entrega-2/imagenes/logo.webp" alt="logo" height="80" class="m-1">
+        <a class="navbar-brand navbar-title" href="/index.html">Cozy Crochet</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon fs-6"></span>
@@ -35,20 +35,20 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="./pages/productos.html">Productos</a>
+              <a class="nav-link" href="../entrega-2/pages/productos.html">Productos</a>
             </li>
 
 
             <li class="nav-item">
-              <a class="nav-link" href="./pages/cuenta.html"> Mi cuenta </a>
+              <a class="nav-link" href="../entrega-2/pages/cuenta.html"> Mi cuenta </a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="pages/sobremi.html"> Sobre mi </a>
+              <a class="nav-link" href="../entrega-2/pages/sobremi.html"> Sobre mi </a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="/pages/novedades.html"> Novedades </a>
+              <a class="nav-link" href="../entrega-2/pages/novedades.html"> Novedades </a>
             </li>
           </ul>
           <form class="d-flex" role="search">
