--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -30,7 +30,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/productos.html">Productos</a>
+                            <a class="nav-link" href="../entrega-2/pages/productos.html">Productos</a>
                         </li>
 
 
