--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <ul class=" navbar-nav me-auto mb-2 mb-lg-0  ">
 
             <li class="nav-item ">
-              <a class="nav-link active  " aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active  " aria-current="page" href="/index.html">Home</a>
             </li>
 
             <li class="nav-item">
@@ -40,7 +40,7 @@
 
 
             <li class="nav-item">
-              <a class="nav-link" href="../entrega-2/pages/cuenta.html"> Mi cuenta </a>
+              <a class="nav-link" href="../pages/cuenta.html"> Mi cuenta </a>
             </li>
 
             <li class="nav-item">
