--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-style ">
       <div class="container-fluid "> 
         <img src="../entrega-2/imagenes/logo.webp" alt="logo" height="80" class="m-1">
-        <a class="navbar-brand navbar-title" href="/index.html">Cozy Crochet</a>
+        <a class="navbar-brand navbar-title" href="../entrega-2/index.html">Cozy Crochet</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon fs-6"></span>
@@ -31,7 +31,7 @@
           <ul class=" navbar-nav me-auto mb-2 mb-lg-0  ">
 
             <li class="nav-item ">
-              <a class="nav-link active  " aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link active  " aria-current="page" href="../entrega-2/index.html">Home</a>
             </li>
 
             <li class="nav-item">
@@ -40,7 +40,7 @@
 
 
             <li class="nav-item">
-              <a class="nav-link" href="../pages/cuenta.html"> Mi cuenta </a>
+              <a class="nav-link" href="../entrega-2/pages/cuenta.html"> Mi cuenta </a>
             </li>
 
             <li class="nav-item">
