--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-style ">
       <div class="container-fluid "> 
-        <img src="../entrega-2/imagenes/logo.webp" alt="logo" height="80" class="m-1">
+        <img src="./imagenes/logo.webp" alt="logo" height="80" class="m-1">
         <a class="navbar-brand navbar-title" href="../entrega-2/index.html">Cozy Crochet</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +35,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="../entrega-2/pages/productos.html">Productos</a>
+              <a class="nav-link" href="./pages/productos.html">Productos</a>
             </li>
 
 
@@ -44,7 +44,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="../entrega-2/pages/sobremi.html"> Sobre mi </a>
+              <a class="nav-link" href="./pages/sobremi.html"> Sobre mi </a>
             </li>
 
             <li class="nav-item">
