--- a/index.html
+++ b/index.html
@@ -11,17 +11,11 @@
 </head>
 
 <body>
-  <!-- PASO UN CREAR UN REPOSITORIO EN GITHUB, ME DA UNA SERIE DE COMANDOS
-      LOS PEGO, ADD .  PARA CAMBIOS Y COMMIT PARA MENSAJES 
-  GIT REMOTE PARA CONECTAR LA PC CON EL REPOSITORIO
-  POR ULTIMO GIT PUSH PARA LLEVAR LOS COMANDOS A LA NUBE
-  AHI YA EN NUESTRO REPOSITORIO ESTA TODO SUBIDO
-  VAMOS A SETTING LUEGO A PAGES Y VAMOS A LA BRANCH QUE QUERES QUE SE SUBA
-  LAS RAMAS SE USAN SI ESTAS TRABAJANDO COLABORATIVAMENTE -->
+
   <header>
     <nav class="navbar navbar-expand-lg navbar-style ">
       <div class="container-fluid "> 
-        <img src="./imagenes/logo.webp" alt="logo" height="80" class="m-1">
+        <img src="../entrega-2/imagenes/logo.webp" alt="logo" height="80" class="m-1">
         <a class="navbar-brand navbar-title" href="../entrega-2/index.html">Cozy Crochet</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,7 +62,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="./imagenes/carrousel-1.jpeg" class="d-block w-100" alt="manguitas cute">
         <div class="carousel-caption d-none d-md-block">
           <h5>PRODUCTO 1</h5>
           <p>Some representative placeholder content for the first slide.</p>
