--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -82,7 +82,7 @@
     
         </section>
     </div>
-    <div class="col-5"><img src="../imagenes/brendap.jpeg" alt="Brenda presentacion" class="img-fluid"></div>
+    <div class="col-5"><img src="../imagenes/brendap.jpeg" alt="Brenda presentacion" class="img-fluid mt-5"></div>
                                 
 </div>
 
