--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
       <div class="carousel-item active">
         <img src="./imagenes/carrousel-1.jpeg" class="d-block w-100" alt="manguitas cute">
         <div class="carousel-caption d-none d-md-block">
-          <h5>PRODUCTO 1</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+          <h5>Manguitas</h5>
+          <p>comodas y calentitas</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="./imagenes/carrousel-2.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
+          <h5>Sueter 505</h5>
           <p>Some representative placeholder content for the second slide.</p>
         </div>
       </div>
