--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-style ">
       <div class="container-fluid "> 
-        <img src="../entrega-2/imagenes/logo.webp" alt="logo" height="80" class="m-1">
+        <img src="./imagenes/logo.webp" alt="logo" height="80" class="m-1">
         <a class="navbar-brand navbar-title" href="../entrega-2/index.html">Cozy Crochet</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
