--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
             <li class="nav-item">
-              <a class="nav-link" href="../entrega-2/pages/cuenta.html"> Mi cuenta </a>
+              <a class="nav-link" href="./pages/cuenta.html"> Mi cuenta </a>
             </li>
 
             <li class="nav-item">
@@ -42,7 +42,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="../entrega-2/pages/novedades.html"> Novedades </a>
+              <a class="nav-link" href="./pages/novedades.html"> Novedades </a>
             </li>
           </ul>
           <form class="d-flex" role="search">
