--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
         <img src="./imagenes/carrousel-1.jpeg" class="d-block w-100" alt="manguitas cute">
         <div class="carousel-caption d-none d-md-block">
           <h5>Manguitas</h5>
-          <p>comodas y calentitas</p>
+          <p>Cómodas y calentitas</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="./imagenes/carrousel-2.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Sueter 505</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+          <p>Su suavidad y comodidad lo hacen ideal para acurrucarse en días fríos o para lucirlo en cualquier ocasión con elegancia y estilo.</p>
         </div>
       </div>
       <div class="carousel-item">
