--- a/pages/productos.html
+++ b/pages/productos.html
@@ -127,7 +127,7 @@
                 <div class="card shadow-sm">
                  <img src="../imagenes/producto-4.jpeg" alt="producto 5">
                       <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text">Este maravilloso suéter tejido a mano es un deleite para la vista gracias a su hermoso tono verde, que evoca la frescura y vitalidad de la naturaleza. Elaborado con habilidad y esmero, se aprecian los detalles delicados de su tejido, que lo hacen único y encantador. Su suavidad y comodidad lo hacen ideal para acurrucarse en días fríos o para lucirlo en cualquier ocasión con elegancia y estilo.</p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-outline-secondary">CHUSMEAR</button>
