--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./imagenes/carrousel-2.jpeg" class="d-block w-100" alt="...">
+        <img src="./imagenes/carrousel-2.jpeg" class="d-block w-100" alt="sueter 505">
         <div class="carousel-caption d-none d-md-block">
           <h5>Sueter 505</h5>
           <p>Su suavidad y comodidad lo hacen ideal para acurrucarse en días fríos o para lucirlo en cualquier ocasión con elegancia y estilo.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="./imagenes/carrousel-3.jpeg" class="d-block w-100" alt="Top verde">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <h5>TOP green Apple</h5>
+          <p>Su suavidad y comodidad lo hacen ideal para acurrucarse en días fríos o para lucirlo en cualquier ocasión con elegancia y estilo.</p>
         </div>
       </div>
     </div>
@@ -92,6 +92,24 @@
       <span class="visually-hidden">Seguiente</span>
     </button>
   </div>
+
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+      </a>
+      <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Carolina Viggiano</span>
+    </div>
+
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <li class="ms-3"><a class="text-body-secondary" href="https://twitter.com/caro_viggiano">
+        <img src="./imagenes/twlogo.webp" class="flex-item" height="40" alt="Twitter"></a></li>
+      <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/caro.viggiano/"> 
+        <img src="./imagenes/iglogo.webp" class="flex-item" height="40" alt="Instagram"></a></li>
+
+    </ul>
+  </footer>
+
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
