--- a/pages/cuenta.html
+++ b/pages/cuenta.html
@@ -56,7 +56,22 @@
     </header>
 
 
-   
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+          <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+          </a>
+          <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Carolina Viggiano</span>
+        </div>
+    
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+          <li class="ms-3"><a class="text-body-secondary" href="https://twitter.com/caro_viggiano">
+            <img src="./imagenes/twlogo.webp" class="flex-item" height="40" alt="Twitter"></a></li>
+          <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/caro.viggiano/"> 
+            <img src="./imagenes/iglogo.webp" class="flex-item" height="40" alt="Instagram"></a></li>
+    
+        </ul>
+      </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
