--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <li class="nav-item">
               <a class="nav-link" href="./pages/sobremi.html"> Sobre mi </a>
             </li>
-
-            
           </ul>
+
+
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn button-style" type="submit">Buscar</button>
@@ -62,7 +62,7 @@
       <div class="carousel-item active">
         <img src="./imagenes/carrousel-1.jpeg" class="d-block w-100" alt="manguitas cute">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Manguitas</h5>
+          <h5>Manguitas Miaw</h5>
           <p>Cómodas y calentitas</p>
         </div>
       </div>
@@ -76,7 +76,7 @@
       <div class="carousel-item">
         <img src="./imagenes/carrousel-3.jpeg" class="d-block w-100" alt="Top verde">
         <div class="carousel-caption d-none d-md-block">
-          <h5>TOP green Apple</h5>
+          <h5>Top Green Apple</h5>
           <p>Su suavidad y comodidad lo hacen ideal para acurrucarse en días fríos o para lucirlo en cualquier ocasión con elegancia y estilo.</p>
         </div>
       </div>
