--- a/pages/cuenta.html
+++ b/pages/cuenta.html
@@ -52,7 +52,7 @@
             </div>
         </nav>
     </header>
-
+    <h1 class="m-2">Mi Cuenta</h1>
 
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <div class="col-md-4 d-flex align-items-center">
