--- a/pages/productos.html
+++ b/pages/productos.html
@@ -41,9 +41,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/sobremi.html"> Sobre mi </a>
                         </li>
-
-                        
                     </ul>
+
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn button-style" type="submit">Buscar</button>
@@ -53,6 +52,7 @@
         </nav>
     </header>
 
+    <h1 class="m-2">Productos</h1>
 
     <div class="album py-5  default_cursor_cs">
         <div class="container">
@@ -62,6 +62,7 @@
               <div class="card shadow-sm">
                <img src="../imagenes/producto-6.jpeg" alt="producto 1">
                     <div class="card-body">
+                      <h2>Mitones Miaw </h2>
                   <p class="card-text">Estos mitones hechos a crochet son una pieza colorida y vibrante que le añadirán un toque alegre a cualquier atuendo. Con su diseño único y artesanal, estos mitones están hechos para destacar entre la multitud. Los diferentes colores utilizados para tejerlos hacen que sean una opción versátil, permitiéndote combinarlos con una gran variedad de prendas. El tejido a crochet les da un toque de textura y calidez que los convierte en una opción perfecta para el invierno.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -77,6 +78,7 @@
                 <div class="card shadow-sm">
                  <img src="../imagenes/producto-1.jpeg" alt="producto 2">
                       <div class="card-body">
+                        <h2>Manguitas Wave</h2>
                     <p class="card-text">Estas manguitas hechas a crochet en color negro son una pieza única y encantadora que sin duda llamarán la atención. El color negro clásico es elegante y versátil, lo que las convierte en una opción perfecta para cualquier ocasión. El tejido a crochet es un trabajo artesanal que le da a estas manguitas un toque auténtico y original. Además, su diseño es lo suficientemente sencillo como para combinar con cualquier atuendo, añadiendo un toque de estilo a cualquier conjunto.</p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
@@ -93,6 +95,7 @@
                 <div class="card shadow-sm">
                  <img src="../imagenes/producto-2.jpeg" alt="producto 3">
                       <div class="card-body">
+                        <h2>Sweater Cielo </h2>
                     <p class="card-text">Este suéter hecho a crochet en tonos celeste, rojo y verde es una pieza única y encantadora que sin duda llamará la atención. Los colores vibrantes y alegres le darán un toque de personalidad a tu guardarropa. El tejido a crochet es un trabajo artesanal que le da al suéter un toque auténtico y original. Además, su diseño es lo suficientemente versátil como para ser usado en diferentes ocasiones, ya sea para un look casual o más elegante.</p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
@@ -109,6 +112,7 @@
                 <div class="card shadow-sm">
                  <img src="../imagenes/producto-3.jpeg" alt="producto 4">
                       <div class="card-body">
+                        <h2>Saquito Vinova Vinoviene</h2>
                     <p class="card-text">Este saquito bordo hecho a crochet es una prenda elegante y sofisticada que sin duda te encantará. El color bordo le da un toque de intensidad y profundidad a la prenda, haciéndola ideal para cualquier ocasión. El tejido a crochet es un trabajo artesanal que le da al saquito un toque auténtico y original. Su diseño es versátil y fácil de combinar con diferentes prendas, lo que lo convierte en una prenda imprescindible en cualquier guardarropa. </p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
@@ -125,6 +129,7 @@
                 <div class="card shadow-sm">
                  <img src="../imagenes/producto-4.jpeg" alt="producto 5">
                       <div class="card-body">
+                        <h2>Sweater 505</h2>
                     <p class="card-text">Este maravilloso suéter tejido a mano es un deleite para la vista gracias a su hermoso tono verde, que evoca la frescura y vitalidad de la naturaleza. Elaborado con habilidad y esmero, se aprecian los detalles delicados de su tejido, que lo hacen único y encantador. Su suavidad y comodidad lo hacen ideal para acurrucarse en días fríos o para lucirlo en cualquier ocasión con elegancia y estilo.</p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
@@ -142,6 +147,7 @@
                 <div class="card shadow-sm">
                  <img src="../imagenes/producto-5.jpeg" alt="producto 6">
                       <div class="card-body">
+                        <h2>Top Green Apple</h2>
                     <p class="card-text">Este top de crochet en tonos de verde y rosa es una pieza con una estética fresca y encantadora. El color verde claro evoca un ambiente natural y veraniego, mientras que el borde rosa añade un toque sutil de elegancia y feminidad. La técnica de crochet utilizada para tejer el top le da un aire artesanal y auténtico que lo hace aún más especial.</p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
