--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -53,13 +53,15 @@
         </nav>
     </header>
 
+<h1 class="m-2">Sobre Mi </h1>
+
 <div class="row">
         <div class="col-7">
         <section>
             <div class="px-4 py-5 my-5 text-center">
                 <img class="d-block mx-auto mb-4" src="../imagenes/logo.webp" alt="" width="72"
                     height="57">
-                <h1 class="display-5 fw-bold text-body-emphasis">Mi historia</h1>
+                <h1 class="display-5 fw-bold text-body-emphasis" >Mi historia</h1>
                 <div class="col-lg-8 mx-auto">
                     <p class="lead mb-4">Me llamo Brenda Monte, tengo 17 años y soy de Buenos Aires,
                         Argentina. Desde chiquita que veo a mi abuela
