--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <ul class=" navbar-nav me-auto mb-2 mb-lg-0  ">
 
             <li class="nav-item ">
-              <a class="nav-link active  " aria-current="page" href="../entrega-2/index.html">Home</a>
+              <a class="nav-link active  " aria-current="page" href="./index.html">Home</a>
             </li>
 
             <li class="nav-item">
@@ -34,7 +34,7 @@
 
 
             <li class="nav-item">
-              <a class="nav-link" href="./pages/cuenta.html"> Mi cuenta </a>
+              <a class="nav-link" href="./pages/cuenta.html"> Novedades</a>
             </li>
 
             <li class="nav-item">
@@ -62,7 +62,7 @@
       <div class="carousel-item active">
         <img src="./imagenes/carrousel-1.jpeg" class="d-block w-100" alt="manguitas cute">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Manguitas Miaw</h5>
+          <h5>Manguitas Wave</h5>
           <p>Cómodas y calentitas</p>
         </div>
       </div>
@@ -77,7 +77,7 @@
         <img src="./imagenes/carrousel-3.jpeg" class="d-block w-100" alt="Top verde">
         <div class="carousel-caption d-none d-md-block">
           <h5>Top Green Apple</h5>
-          <p>Su suavidad y comodidad lo hacen ideal para acurrucarse en días fríos o para lucirlo en cualquier ocasión con elegancia y estilo.</p>
+          <p>La técnica de crochet utilizada para tejer el top le da un aire artesanal y auténtico que lo hace aún más especial.</p>
         </div>
       </div>
     </div>
