--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -35,7 +35,7 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/cuenta.html"> Mi cuenta </a>
+                            <a class="nav-link" href="../pages/cuenta.html">Novedades</a>
                         </li>
 
                         <li class="nav-item">
