--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
 
 
             <li class="nav-item">
-              <a class="nav-link" href="./pages/cuenta.html"> Novedades</a>
+              <a class="nav-link" href="./pages/novedadess.html"> Novedades</a>
             </li>
 
             <li class="nav-item">
               <a class="nav-link" href="./pages/sobremi.html"> Sobre mi </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/cuenta.html"> Mi Cuenta </a>
+          </li>
           </ul>
 
 
