--- a/pages/productos.html
+++ b/pages/productos.html
@@ -35,13 +35,17 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/cuenta.html"> Novedades</a>
+                            <a class="nav-link" href="../pages/novedadess.html"> Novedades</a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/sobremi.html"> Sobre mi </a>
                         </li>
                     </ul>
+                    
+                    <li class="nav-item">
+                      <a class="nav-link" href="../pages/cuenta.html"> Mi Cuenta </a>
+                  </li>
 
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
