--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a class="nav-link" href="./pages/sobremi.html"> Sobre mi </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/cuenta.html"> Mi Cuenta </a>
+              <a class="nav-link" href="./pages/cuenta.html"> Mi Cuenta </a>
           </li>
           </ul>
 
