--- a/pages/cuenta.html
+++ b/pages/cuenta.html
@@ -43,7 +43,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/cuenta.html"> Mi Cuenta </a>
+                            <a class="nav-link" href="../pages/cuenta.html"> Contacto </a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -55,10 +55,38 @@
         </nav>
     </header>
 
-<h1 class="m-2">Mi Cuenta</h1>
+<h1 class="m-2">Contactame para tus pedidos! </h1>
+
+<section>
+   
+
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+        <img src="../imagenes/logowhats.webp"  class="flex-item" height="40" alt="logo WhatsApp">
+        <h2> WhatsApp</h2>
+        <p> +54 11 3516-8090 </p>
+    </div>
+
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+        <img src="../imagenes/logogmail.webp"  class="flex-item" height="40" alt="logo Mail">
+        <h2>Mail</h2>
+        <p> brendamonte05@gmail.com </p>
+    </div>
+
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+        <h2>Redes Sociales</h2>
+        <img src="../imagenes/iglogo.webp"  class="flex-item" height="40" alt="logo ig">
+        <a href="https://instagram.com/bren_monte?igshid=ZWIzMWE5ZmU3Zg==" class="btn button-style btn-lg px-4 gap-3">Instagram</a>
+       
+    </div>
 
 
 
+
+
+
+
+
+</section>
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
       <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
