--- a/pages/productos.html
+++ b/pages/productos.html
@@ -42,9 +42,9 @@
                             <a class="nav-link" href="../pages/sobremi.html"> Sobre mi </a>
                         </li>
                     </ul>
-                    
+
                     <li class="nav-item">
-                      <a class="nav-link" href="../pages/cuenta.html"> Mi Cuenta </a>
+                      <a class="nav-link" href="../pages/cuenta.html"> Contacto</a>
                   </li>
 
                     <form class="d-flex" role="search">
