--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -42,7 +42,7 @@
                             <a class="nav-link" href="../pages/sobremi.html"> Sobre mi </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/cuenta.html"> Mi Cuenta </a>
+                            <a class="nav-link" href="../pages/cuenta.html"> Contacto</a>
                         </li>
 
                        
