--- a/pages/cuenta.html
+++ b/pages/cuenta.html
@@ -63,18 +63,18 @@
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         <img src="../imagenes/logowhats.webp"  class="flex-item" height="40" alt="logo WhatsApp">
         <h2> WhatsApp</h2>
-        <p> +54 11 3516-8090 </p>
+        <p class="p-style"> +54 11 3516-8090 </p>
     </div>
 
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         <img src="../imagenes/logogmail.webp"  class="flex-item" height="40" alt="logo Mail">
         <h2>Mail</h2>
-        <p> brendamonte05@gmail.com </p>
+        <p class="p-style" > brendamonte05@gmail.com </p>
     </div>
 
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <h2>Redes Sociales</h2>
         <img src="../imagenes/iglogo.webp"  class="flex-item" height="40" alt="logo ig">
+        <h2>Redes Sociales</h2>
         <a href="https://instagram.com/bren_monte?igshid=ZWIzMWE5ZmU3Zg==" class="btn button-style btn-lg px-4 gap-3">Instagram</a>
        
     </div>
