--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  
+    <link rel="shortcut icon" href="./imagenes/logo-ico.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ropa tejida a crochet hacha con mucho amor y esmero. No te pierdas nuestros Drops semanales!">
+    <meta name="keywords" content="Crochet, ropa, tejido, hecho a mano, handmade, amor, tops tejidos, tops de lana">
+    <meta name="author" content="Carolina Viggiano">
+    <meta property="og:title" content="Cozy Crochet-Ropa hecha con amor y nudos">
+    <meta property="og:image" content="https://caroviggiano.github.io/preentrega2/imagenes/producto-4.jpeg">
+    <meta property="og:creator" content="Carolina Viggiano">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title> Cozy Crochet</title>
 </head>
 
