--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <title> Cozy Crochet</title>
 </head>
 
-<body>
+<body class="body-colour">
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-style ">
@@ -64,7 +64,7 @@
     </nav>
   </header>
 
-  <div id="carouselExampleCaptions" class="carousel slide">
+  <div id="carouselExampleCaptions" class="carousel slide ">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
