--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
   </header>
 
-  <div id="carouselExampleCaptions" class="carousel slide ">
+  <div id="carouselExampleCaptions " class="carousel slide body-style ">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
