--- a/pages/novedadess.html
+++ b/pages/novedadess.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
-    <link rel="shortcut icon" href="./imagenes/logo-ico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes/logo-ico.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ropa tejida a crochet hacha con mucho amor y esmero. No te pierdas nuestros Drops semanales!">
     <meta name="keywords" content="Crochet, ropa, tejido, hecho a mano, handmade, amor, tops tejidos, tops de lana">
