--- a/index.html
+++ b/index.html
@@ -64,48 +64,46 @@
     </nav>
   </header>
 
-  <div id="carouselExampleCaptions " class="carousel slide body-style">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="./imagenes/carrousel-1.jpeg" class="d-block w-100" alt="manguitas cute">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Manguitas Wave</h5>
+  <!-- Carrousel 2 Incio -->
+<div id="carouselExampleCaptions" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="./imagenes/carrousel-1.jpeg" class="d-block w-100" alt="Manguitas Wave">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Manguitas Wave</h5>
           <p>Cómodas y calentitas</p>
-        </div>
-
       </div>
-      <div class="carousel-item">
-        <img src="./imagenes/carrousel-2.jpeg" class="d-block w-100" alt="sueter 505">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Sueter 505</h5>
-          <p>Su suavidad y comodidad lo hacen ideal para acurrucarse en días fríos o para lucirlo en cualquier ocasión con elegancia y estilo.</p>
-        </div>
-
+    </div>
+    <div class="carousel-item">
+      <img src="./imagenes/carrousel-2.jpeg" class="d-block w-100" alt="Sweater 505">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Sueter 505</h5>
+        <p>Su suavidad y comodidad lo hacen ideal para acurrucarse en días fríos o para lucirlo en cualquier ocasión con elegancia y estilo.</p>
       </div>
-      <div class="carousel-item">
-        <img src="./imagenes/carrousel-3.jpeg" class="d-block w-100" alt="Top verde">
+    </div>
+    <div class="carousel-item">
+      <img src="./imagenes/carrousel-3.jpeg" class="d-block w-100" alt="Top Green Apple">
         <div class="carousel-caption d-none d-md-block">
           <h5>Top Green Apple</h5>
           <p>La técnica de crochet utilizada para tejer el top le da un aire artesanal y auténtico que lo hace aún más especial.</p>
-        </div>
       </div>
-
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previo</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Seguiente</span>
-    </button>
   </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previo</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Siguiente</span>
+  </button>
+
+  <!-- Carrousel 2 Fin -->
 
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
