--- a/index.html
+++ b/index.html
@@ -105,6 +105,29 @@
 
   <!-- Carrousel 2 Fin -->
 
+  <section>
+    <hr class="featurette-divider">
+    <div class="container marketing">
+        <div class="row">
+          <div class="col-lg-4">
+           <img class="bd-placeholder-img rounded-circle" preserveAspectRatio="xMidYMid slice" width="140" height="140" src="../imagenes/producto-3.jpeg" alt="Saquito Vinova Vinoviene">
+            <h2 class="fw-normal">Saquito Vinova Vinoviene</h2>
+            <p><a class="btn button-style btn-lg" href="../pages/productos.html">Ver Detalles »</a></p>
+          </div>
+          <div class="col-lg-4">
+            <img class="bd-placeholder-img rounded-circle" preserveAspectRatio="xMidYMid slice" width="140" height="140" src="../imagenes/producto-6.jpeg" alt="Mitones Miaw">
+            <h2 class="fw-normal">Mitones Miaw</h2>
+            <p><a class="btn button-style btn-lg " href="../pages/productos.html">Ver Detalles »</a></p>
+          </div>
+          <div class="col-lg-4">
+            <img class="bd-placeholder-img rounded-circle" preserveAspectRatio="xMidYMid slice" width="140" height="140" src="../imagenes/producto-4.jpeg" alt="Sweater 505">
+            <h2 class="fw-normal">Sweater 505</h2>
+            <p><a class="btn button-style btn-lg " href="../pages/productos.html">Ver Detalles »</a></p>
+          </div>
+        </div>
+      </div>
+    </section>
+
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
       <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
