--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
           <div class="col-lg-4">
            <img class="bd-placeholder-img rounded-circle" preserveAspectRatio="xMidYMid slice" width="140" height="140" src="./imagenes/producto-3.jpeg" alt="Saquito Vinova Vinoviene">
             <h2 class="fw-normal">Saquito Vinova Vinoviene</h2>
-            <p><a class="btn button-style btn-lg" href="../pages/productos.html">Ver Detalles »</a></p>
+            <p><a class="btn button-style btn-lg" href="./pages/productos.html">Ver Detalles »</a></p>
           </div>
           <div class="col-lg-4">
             <img class="bd-placeholder-img rounded-circle" preserveAspectRatio="xMidYMid slice" width="140" height="140" src="./imagenes/producto-6.jpeg" alt="Mitones Miaw">
             <h2 class="fw-normal">Mitones Miaw</h2>
-            <p><a class="btn button-style btn-lg " href="../pages/productos.html">Ver Detalles »</a></p>
+            <p><a class="btn button-style btn-lg " href="./pages/productos.html">Ver Detalles »</a></p>
           </div>
           <div class="col-lg-4">
             <img class="bd-placeholder-img rounded-circle" preserveAspectRatio="xMidYMid slice" width="140" height="140" src="./imagenes/producto-4.jpeg" alt="Sweater 505">
             <h2 class="fw-normal">Sweater 505</h2>
-            <p><a class="btn button-style btn-lg " href="../pages/productos.html">Ver Detalles »</a></p>
+            <p><a class="btn button-style btn-lg " href="./pages/productos.html">Ver Detalles »</a></p>
           </div>
         </div>
       </div>
