--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
 
   <!-- Carrousel 2 Fin -->
 
-  <section>
+  <div>
     <hr class="featurette-divider">
     <div class="container marketing">
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-5">
            <img class="bd-placeholder-img rounded-circle" preserveAspectRatio="xMidYMid slice" width="140" height="140" src="./imagenes/producto-3.jpeg" alt="Saquito Vinova Vinoviene">
             <h2 class="fw-normal">Saquito Vinova Vinoviene</h2>
             <p><a class="btn button-style btn-lg" href="./pages/productos.html">Ver Detalles »</a></p>
@@ -119,14 +119,14 @@
             <h2 class="fw-normal">Mitones Miaw</h2>
             <p><a class="btn button-style btn-lg " href="./pages/productos.html">Ver Detalles »</a></p>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <img class="bd-placeholder-img rounded-circle" preserveAspectRatio="xMidYMid slice" width="140" height="140" src="./imagenes/producto-4.jpeg" alt="Sweater 505">
             <h2 class="fw-normal">Sweater 505</h2>
             <p><a class="btn button-style btn-lg " href="./pages/productos.html">Ver Detalles »</a></p>
           </div>
         </div>
       </div>
-    </section>
+  </div>
 
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
