final pre entrega

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Siguiente</span>
   </button>
+  </div>
 
   <!-- Carrousel 2 Fin -->
 
